# git-supervisor

./: .dockerignore  .gitignore  LICENSE  README.md
.github/workflows/: docker-build-push.yml  release-rust.yml  rust-check.yml
check-push-rs/src/: cleanup.rs  git.rs  lib.rs  logging.rs  repo.rs  scripts.rs  tag.rs
check-push-rs/tests/integration/: test_branch.rs  test_cleanup.rs  test_tag.rs
check-push-rs/tests/unit/: test_config.rs
deployment/docker-compose/: compose.yml
docs/: diagrams.md
docs/imgs/: flowchart.mmd  seqdiagram.mmd
gh-webhook/: hook.py  pyproject.toml
scripts/: set-version.sh
src/: check-push.sh  cleanup-archives.sh
src/check-push-rs/: Cargo.toml  README.md
src/check-push-rs/docs/: design.md
src/check-push-rs/src/: branch.rs  config.rs  error.rs  file_ops.rs  lock.rs  main.rs  version.rs
src/check-push-rs/tests/unit/: test_version.rs
src/gh-webhook/: hook.py
src/supervisor/: Cargo.toml  README.md  deployments.sample.yaml  deployments.yaml
src/supervisor/src/: config.rs  lib.rs  main.rs  ops.rs  ssh.rs
src/supervisor/tests/: integration_ssh.rs
supervisor/: Cargo.toml  README.md  build.rs  deployments.sample.yaml
supervisor/embed/: check-push.sh
supervisor/src/: config.rs  console.rs  hook.rs  keys.rs  lib.rs  main.rs  ops.rs  ssh.rs
supervisor/tests/: integration_ssh.rs
tests/: cleanup-test.sh  launch-testing.sh
tests/scripts/: cleanup-test.sh  create-test-scenarios.sh  setup-test-repos.sh  test-check-push.sh  test-config.sh
