[package]
name = "git-supervisor"
version = "2.0.7"
edition = "2021"
authors = ["JF Ding <jfding@gmail.com>"]
description = "Central supervisor to control remote hosts and git repos for deployment"
readme = "README.md"
license = "MIT"
repository = "https://github.com/jfding/git-supervisor"
keywords = ["deployment", "git", "devops", "automation"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
clap = { version = "4.5.60", features = ["derive", "env"] }
dirs = "5"
hex = "0.4.3"
hmac = "0.12.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
