[package]
name = "check-push-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
git2 = "0.18"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
anyhow = "1"
thiserror = "1"
walkdir = "2"
regex = "1"
fs2 = "0.4"
chrono = "0.4"
pathdiff = "0.2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "2"

[[bin]]
name = "check-push-rs"
path = "src/main.rs"
